tests/ui/deprecated_super_init.stderr
error: use of deprecated method `pyo3::internal::pyclass_init::TpNewTupleResolver::<S, (S, B)>::resolve`: Tuple syntax for super class initialization is phased out. Use `PyClassInitializer` instead.
  --> tests/ui/deprecated_super_init.rs:14:17
   |
14 |     fn new() -> (Sub1, Base) {
   |                 ^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/deprecated_super_init.rs:1:9
   |
 1 | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated method `pyo3::internal::pyclass_init::TpNewTupleResolver::<S, (S, B)>::resolve`: Tuple syntax for super class initialization is phased out. Use `PyClassInitializer` instead.
  --> tests/ui/deprecated_super_init.rs:26:17
   |
26 |     fn new() -> PyResult<(Sub2, Base)> {
   |                 ^^^^^^^^

error: aborting due to 2 previous errors
